Change about page font size, add <p> tags, fix spacing in header

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,3 +1,12 @@
+h1 {
+  ._18,
+  ._25,
+  ._27 {
+    // word-spacing: 20px;
+    width: 2.2rem;
+  }
+}
+
 .stage-cube-cont {
   width: 50%;
   height: 100%;
