--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,5 +1,11 @@
 @import '../../global_val';
 
+span {
+  span {
+    word-spacing: 400px;
+  }
+}
+
 // Default class for text animation
 .text-animate {
   display: inline-block;
